<resources>
    <string name="app_name">Hangman</string>

    <string name="start_game_eng">Start Game</string>
    <string name="start_game_nor">Start Spill</string>

    <string name="twoPlayerStart_nor">2-spillere</string>
    <string name="twoPlayerStart_eng">2-players</string>


    <string name="norsk">Norsk</string>
    <string name="english">English</string>

    <string name="heltTitle_nor">Spill instruksjoner</string>
    <string name="heltTitle_eng">Game instructions</string>

    <string name="help_nor">Hangman går ut på å gjette bokstaver til et ord. Du vil se hvor mange bokstar det er i ordet til en hver tid. Når du gjetter en bokstav som er i ordet vil du se hvor bokstaven er plassert. Dersom en bokstav er brukt flere ganger i ordet vil du se alle plassene bokstaven blir brukt når du gjetter bokstaven. For hver bokstav du gjetter feil vil det bli tegnet nye streker som til slutt ender med at strekfiguren blir hengt. Gjett rett ord, du vinner. Gjett feil for mange ganger, du taper!</string>
    <string name="help_eng">Hangman is played by guessing letter to a word. You will be able to see how many letters there are in the word at all times. Once you guess a letter that is in the word, you will  see where in the word that letter is placed. If one letter is used multiple times in the word you it will show all places where the letter is used once you guess the letter. For every wrong letter guessed there will be drawn something new that will add up to a stickman getting hanged. Guess the right word, you win. Guess wrong letter too many time, you loose!</string>

    <string name="wins_nor">Vunnet:</string>
    <string name="wins_eng">Wins:</string>
    <string name="loss_nor">Tapt:</string>
    <string name="loss_eng">Loss:</string>

    <string name="exit_nor">Vil du lukke spillet?</string>
    <string name="exit_eng">Do you want to exit the game?</string>

    <string name="yes_nor">Ja.</string>
    <string name="yes_eng">Yes.</string>
    <string name="no_nor">Nei.</string>
    <string name="no_eng">No.</string>

    <string name="next_nor">Neste ord</string>
    <string name="next_eng">Next word</string>

    <string name="setWordDesc_nor">Skriv inn ordet den andre spilleren skal gjette, klikk deretter OK knappen</string>
    <string name="setWordDesc_eng">Write the word you want the other player to guess, continue by clicking the OK button</string>

    <string name="setWordInputPreset_nor">Ditt ord</string>
    <string name="setWordInputPreset_eng">Your word</string>

    <string name="writeHere_nor">Skriv her: </string>
    <string name="writeHere_eng">Write here: </string>

    <string name="wrongInput_nor">Skriv in bere eit ord!</string>
    <string name="wrongInput_eng">Write just one word!</string>

    <string-array name="help">
        <item>@string/help_nor</item>
        <item>@string/help_eng</item>
    </string-array>

    <integer-array name="bgList0">
        <item>@drawable/game0</item>
        <item>@drawable/game1</item>
        <item>@drawable/game2</item>
        <item>@drawable/game3</item>
        <item>@drawable/game4</item>
        <item>@drawable/game5</item>
        <item>@drawable/game6</item>
        <item>@drawable/game7</item>
        <item>@drawable/game8</item>
        <item>@drawable/game9</item>
        <item>@drawable/game10</item>
    </integer-array>

    <integer-array name="bgList1">
        <item>@drawable/a_game0</item>
        <item>@drawable/a_game1</item>
        <item>@drawable/a_game2</item>
        <item>@drawable/a_game3</item>
        <item>@drawable/a_game4</item>
        <item>@drawable/a_game5</item>
        <item>@drawable/a_game6</item>
        <item>@drawable/a_game7</item>
        <item>@drawable/a_game8</item>
        <item>@drawable/a_game9</item>
        <item>@drawable/a_game10</item>
    </integer-array>
</resources>
