<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg">

    <TextView
        android:id="@+id/setWordHelpText"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/setWordDesc_nor"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writeHereTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/writeHere_nor"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setWordHelpText"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/yourWordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/setWordInputPreset_nor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/writeHereTV"
        app:layout_constraintTop_toBottomOf="@+id/setWordHelpText"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="57dp"
        android:layout_height="79dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/ok"
        android:onClick="onOKBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="57dp"
        android:layout_height="70dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/exit"
        android:onClick="onBackBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>