<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="388dp"
        android:layout_marginTop="61dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:onClick="onStartClickBtn"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioNor"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton">

        <RadioButton
            android:id="@+id/radioNor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/norsk" />

        <RadioButton
            android:id="@+id/radioEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/english" />
    </RadioGroup>

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="77dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/help"
        android:fadingEdge="none"
        android:onClick="onHelpBtnClick"
        android:shadowRadius="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="74dp"
        android:layout_height="108dp"
        android:background="@drawable/close"
        android:elevation="0dp"
        android:onClick="onExitBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>